--- a/templates/question.html
+++ b/templates/question.html
@@ -19,6 +19,12 @@
 
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/plugins/sweetalert/sweetalert.css' %}" rel="stylesheet">
+    <link href="{% static 'css/plugins/chosen/bootstrap-chosen.css' %}" rel="stylesheet">
+    <link href="{% static 'css/ios.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'css/plugins/jasny/jasny-bootstrap.min.css' %}" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
 
 <style type="text/css">.jqstooltip { position: absolute;left: 0px;top: 0px;visibility: hidden;background: rgb(0, 0, 0) transparent;background-color: rgba(0,0,0,0.6);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";color: white;font: 10px arial, san serif;
   text-align: left;white-space: nowrap;padding: 5px;border: 1px solid white;z-index:10000;}.jqsfield { color: white;font: 10px arial, san serif;text-align: left;}
@@ -194,7 +200,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="wrapper wrapper-content">
-                        <div class="row" align="center">
+                        <div class="row" >
 
                             <div class="col-lg-4" style="width: 100%;">
                                 <div class="ibox float-e-margins">
@@ -209,32 +215,67 @@
                                            </div>
                                     </div>
                                     <div class="ibox-content">
-                                        <div>
+                                        <div class="row">
                                             <div id="feedAnswers" class="feed-activity-list">
                                                 {% for x,y in Comments %}
                                                 <div class="feed-element" align="left">
-                                                  <small class="pull-left">{{x.publish_date}}</small>
-                                                    <a href="profile.html" class="pull-right">
-                                                        <img alt="image" class="img-circle" src="{% static 'img/a1.jpg' %}">
-                                                    </a>
-                                                    <div class="media-body ">
-                                                        <small class="pull-right" style=""> <b>{{x.author.user.first_name}} {{x.author.user.last_name}}</b></small><br>
-                                                        <div class="well">{{x.description}}</div>
+                                                    <div class="row">
+                                                        <div class="col-lg-12 col-md-12 col-sm-12">
+                                                            <small class="pull-left">{{x.publish_date}}</small>
+                                                            <a href="profile.html" class="pull-right">
+                                                                <img alt="image" class="img-circle" src="{% static 'img/a1.jpg' %}">
+                                                            </a>
+                                                            <div class="media-body ">
+                                                                <small class="pull-right" style=""> <b>{{x.author.user.first_name}} {{x.author.user.last_name}}</b></small><br>
+                                                                <div class="well">{{x.description|safe}}</div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-lg-12 col-md-12 col-sm-12">
+                                                            <div class="row">
+                                                                <div class="col-md-6 col-lg-6">
+                                                                    <button id="ratingNumber_{{forloop.counter}}" class="ratingNumber" onclick="rateAnswer(this.id,'ratingStars_{{forloop.counter}}')" style="display: inline;"><b id="ratingNumberTxt__{{forloop.counter}}" style="font-size: 18px; color: gold;">☆ {{y}}</b></button>
+                                                                    <small id="ratingStars_{{forloop.counter}}" class="rating" style="display: none; font-size: 150%;">
+                                                                      <span id="rating5_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
+                                                                      <span id="rating4_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
+                                                                      <span id="rating3_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
+                                                                      <span id="rating2_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
+                                                                      <span id="rating1_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
+                                                                    </small>
+                                                                </div>
+                                                                <div class="col-md-offset-3 col-md-3 col-lg-3 ">
+                                                                    <button class="btn btn-sm btn-warning pull-right">Editar</button>
+                                                                    <button class="btn btn-sm btn-danger pull-right">Eliminar</button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
-                                                    <button id="ratingNumber_{{forloop.counter}}" class="ratingNumber" onclick="rateAnswer(this.id,'ratingStars_{{forloop.counter}}')" style="display: inline;"><b id="ratingNumberTxt__{{forloop.counter}}" style="font-size: 18px; color: gold;">☆ {{y}}</b></button>
-                                                    <small id="ratingStars_{{forloop.counter}}" class="rating" style="display: none; font-size: 150%;">
-                                                      <span id="rating5_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
-                                                      <span id="rating4_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
-                                                      <span id="rating3_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
-                                                      <span id="rating2_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
-                                                      <span id="rating1_{{forloop.counter}}" onclick="postRating({{x.pk}},'ratingNumber_{{forloop.counter}}','ratingStars_{{forloop.counter}}','ratingNumberTxt__{{forloop.counter}}',this.id)">☆</span>
-                                                    </small>
+
                                                 </div>
                                                 {% endfor %}
-
+                                            </div>
+                                            <div class="col-lg-12 col-sm-12" style="padding-top:2%">
+                                                <form id="formComment" method="POST" action="{% url 'comment_post' %}" enctype="multipart/form-data">
+                                                    {% csrf_token %}
+                                                    <input type="text" value="{{Postpk}}" name="Postpk" hidden>
+                                                    <div class="form-group"><label>Comentar:</label> <input placeholder="Escriba su comentario"  class="form-control summernote" type="text" id="summernote"></div>
+                                                    <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                                                        <div class="form-control" data-trigger="fileinput">
+                                                            <i class="glyphicon glyphicon-file fileinput-exists"></i>
+                                                        <span class="fileinput-filename"></span>
+                                                        </div>
+                                                        <span class="input-group-addon btn btn-default btn-file">
+                                                            <span class="fileinput-new">Adjuntar Archivo</span>
+                                                            <span class="fileinput-exists">Cambiar</span>
+                                                            <input type="file" id="saved_file" name="saved_file"/>
+                                                        </span>
+                                                        <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Eliminar</a>
+                                                    </div> 
+                                                    <div class="pull-right">
+                                                        <button class="btn btn-warning btn-sm" type="submit"><i class="fa fa-pencil"></i> Comentar</button>
+                                                    </div>
+                                                </form>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -257,7 +298,9 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
     <script src="{% static 'js/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
-
+    <script src="{% static 'js/plugins/jasny/jasny-bootstrap.min.js' %}"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
+    
     <!-- Flot -->
     <script src="{% static 'js/plugins/flot/jquery.flot.js' %}"></script>
     <script src="{% static 'js/plugins/flot/jquery.flot.tooltip.min.js' %}"></script>
@@ -294,6 +337,35 @@
                 toastr.success('Bienvenido Juan Jose', 'RI UNAB');
 
             }, 1300);
+            $('.summernote').summernote({
+                toolbar: false,
+                height: 100,
+            });
+            function upload(event) {
+                event.preventDefault();
+                var data = new FormData($('form').get(0));
+                data.append('content',$('#summernote').summernote('code')); 
+                $.ajax({
+                    url: $(this).attr('action'),
+                    type: $(this).attr('method'),
+                    data: data,
+                    cache: false,
+                    processData: false,
+                    contentType: false,
+                    success: function(data) {
+                        $('#summernote').summernote('reset');
+                        $("#saved_file").val("");
+                        if (data.message == "ok"){
+                            location.reload();
+                        }
+                    }
+                });
+                return false;
+            }
+                
+            $(function() {
+                $('form').submit(upload);
+            });
         });
     </script>
 
