--- a/retro/templates/thread_details.html
+++ b/retro/templates/thread_details.html
@@ -33,7 +33,7 @@
 {% block breadcrumb %}
 <div class="row wrapper border-bottom white-bg page-heading" style="padding-bottom: 0px;">
     <div class="col-lg-10">
-        <h2>Punto de encuentro</h2>
+        <h2>Punto de encuentro - Hilo: {{ thread.name }} - Preguntas </h2>
     </div>
     <div class="col-lg-2">
 
@@ -43,8 +43,8 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-lg-12">
-      <div class="wrapper wrapper-content animated fadeInRight">
+  <div class="col-lg-12 animated fadeInRight">
+      <div class="wrapper wrapper-content">
 {#            {% if request|PrivilegeCreateThread:section.pk %}#}
         <div class="col-md-12">
           <form action="{% url 'thread_details' thread.pk %}" class="form-horizontal" method="get">
@@ -90,42 +90,50 @@
                     </div>
                     <div class="col-md-2 ">
                         <div class="vote-icon">
-                            <i class="fa fa-css3"> </i>
+                            <i class="fa fa-sign-in"> </i>
                         </div>
                     </div>
                 </div>
             </div>
           {% endfor %}
         </div>
-      </div>
-  </div>
-  <div class="row text-center">
-    <ul class="pagination">
-      {% if postlist.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?page={{ postlist.previous_page_number }}{{searchFilter}}">Anterior</a>
-      </li>
-      {% else %}
-      <li class="page-item disabled">
-        <a class="page-link">Anterior</a>
-      </li>
-      {% endif %} {% if postlist.number|add:'-4' > 1 %}
-      <li><a href="?page={{ postlist.number|add:'-5' }}{{searchFilter}}">&hellip;</a></li>
-      {% endif %} {% for i in postlist.paginator.page_range %} {% if postlist.number == i %}
-      <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-      {% elif i > postlist.number|add:'-5' and i < postlist.number|add:'5' %} <li><a href="?page={{ i }}{{searchFilter}}">{{i}}</a></li>
-        {% endif %} {% endfor %} {% if postlist.paginator.num_pages > postlist.number|add:'4' %}
-        <li><a href="?page={{ postlist.number|add:'5' }}{{searchFilter}}">&hellip;</a></li>
-        {% endif %} {% if postlist.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ postlist.next_page_number }}{{searchFilter}}">Siguiente</a>
-        </li>
+        {% if postlist.paginator.count != 0 %}
+          <div class="row text-center">
+            <ul class="pagination">
+              {% if postlist.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ postlist.previous_page_number }}{{searchFilter}}">Anterior</a>
+                </li>
+              {% else %}
+                <li class="page-item disabled">
+                  <a class="page-link">Anterior</a>
+                </li>
+              {% endif %} {% if postlist.number|add:'-4' > 1 %}
+              <li><a href="?page={{ postlist.number|add:'-5' }}{{searchFilter}}">&hellip;</a></li>
+            {% endif %} {% for i in postlist.paginator.page_range %} {% if postlist.number == i %}
+              <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+            {% elif i > postlist.number|add:'-5' and i < postlist.number|add:'5' %} <li><a href="?page={{ i }}{{searchFilter}}">{{i}}</a></li>
+            {% endif %} {% endfor %} {% if postlist.paginator.num_pages > postlist.number|add:'4' %}
+              <li><a href="?page={{ postlist.number|add:'5' }}{{searchFilter}}">&hellip;</a></li>
+            {% endif %} {% if postlist.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="?page={{ postlist.next_page_number }}{{searchFilter}}">Siguiente</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a class="page-link">Siguiente</a>
+              </li>
+            {% endif %}
+            </ul>
+          </div>
         {% else %}
-        <li class="page-item disabled">
-          <a class="page-link">Siguiente</a>
-        </li>
-        {% endif %}
-    </ul>
+        <div class="col-md-12">
+              <div class="alert alert-info text-center">
+                No se han encontrado preguntas para tu filtro de búsqueda.
+              </div>
+            </div>
+      {% endif %}
+      </div>
   </div>
 </div>
 <div class="modal inmodal fade" id="addPost" tabindex="-1" role="dialog"  aria-hidden="true">
