--- a/auditorias/templates/auditorias/edit_umbral.html
+++ b/auditorias/templates/auditorias/edit_umbral.html
@@ -71,35 +71,33 @@
 
         </nav>
         </div>
-        <div>   
-                <h1>Datos Usuario</h1>
-                <h1></h1>
-                <h1></h1>
-                {%for x in umbral %}
-                <h1>Nombre :{{x.user}} Rut: {{x.rut}} Umbral:{{x.umbral}}</h1>
-                {% endfor %}
-
-                <h1>Fecha Publicación</h1>
-                <h1></h1>
-                <h1></h1>
-                {%for z in date %}
-                <h2>Fecha Actual:{{now}}</h2>
-                <h2>Fecha Publicación:{{z.publish_date}}</h2>
-                
-                {% endfor %}
-
-        </div>
         {% block breadcrumb %}{% endblock breadcrumb %}
             <div class="wrapper wrapper-content">
                 {% block content %}
+                <div class="container">
+
+                    <div class="row">
+                            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                                <h1 class = 'text-center' style="margin-top:30px;"></h1>
+                                <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                                    <h1>Cambiar umbral</h1>
+                                    {{ form }}
+                                    <input type="submit" value="Enviar" class="btn btn-primary btn-lg btn-block">
+                                </form>
+                                <br>
+                            </div>
+                        
+                        </div>
+                    </div>
+                </div>
                 {% endblock content %}
             </div>
         <div class="footer">
             <div class="pull-right">
-                Desarrollado por <strong></strong>.
+                Desarrollado por <strong>Team Binario</strong>.
             </div>
             <div>
-                <strong>Universidad Andrés Bello</strong> / Facultad de Ingeniería &copy; 2018
+                <strong>Universidad Andrés Bello</strong> / Facultad de Ingeniería &copy; 2016-2017
             </div>
         </div>
         </div>
