--- a/alertas/templates/alertas.html
+++ b/alertas/templates/alertas.html
@@ -1,27 +1,54 @@
-
+{% extends "base.html" %}
 {% load static %}
-<ul class="nav metismenu" id="side-menu">
-    <li class="nav-header">
-        <div class="dropdown profile-element">
-                <span>
-                    <a href="#">
-                        <img  class="center-block img-responsive" src="{% static 'logo.png' %}" style="width: 80px;" />
-                    </a>
-                </span><br>
-                <h4 class="text-center" style="color:#FFF;">Plataforma de Retroalimentación</h4>
-        </div>
-        <div class="logo-element">
-            Retro
-        </div>
-    </li>
 
-    <li>
-        <a href="{% url 'index' %}"><i class="fa fa-home"></i> <span class="nav-label">Inicio</span></a>
-    </li>
-    <li>
-        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Consultas</span></a>
-    </li>
-    <li>
-        <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Asignaturas</span></a>
-    </li>
-</ul>
+{% block stylesheet %}
+
+<link href="{% static 'css/plugins/sweetalert/sweetalert.css' %}" rel="stylesheet">
+<link href="{% static 'css/plugins/chosen/bootstrap-chosen.css' %}" rel="stylesheet">
+<link href="{% static 'css/ios.css' %}" rel="stylesheet">
+<link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+{% endblock stylesheet %}
+
+
+{% block breadcrumb %}
+<div class="row wrapper border-bottom white-bg page-heading" style="padding-bottom: 0px;">
+    <div class="col-lg-10">
+        <h2>Crear Alerta</h2>
+    </div>
+    <div class="col-lg-2">
+
+    </div>
+</div>
+{% endblock breadcrumb %}
+{% block content %}
+
+<div class="container">
+        <div class="row">
+            <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 col-offset-10">
+                <h1 class = 'text-center' style="margin-top:30px;">Agregar alerta</h1>
+
+                <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+
+                    {{form.as_p}}
+                    {{form2.as_p}}
+
+                <input type="submit" value="Enviar" class="btn btn-primary btn-lg btn-block">
+                </form>
+                <br>
+            </div>
+            
+        </div>
+    </div>
+{% endblock content %}
+
+
+{% block javascript %}
+<script src="{% static 'js/plugins/chosen/chosen.jquery.js' %}"></script>
+
+<script>
+    
+</script>
+
+
+{% endblock javascript %}
