--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -24,4 +24,7 @@
     <li>
         <a href="" disabled><i class="fa fa-book "></i> <span class="nav-label">Mis Asignaturas</span></a>
     </li>
+    <li>
+        <a href="{% url 'alerta' %}" disabled><i class="fa-fa-book "></i> <span class="nav-label">Generar alerta</span></a>
+    </li>
 </ul>
