--- a/auditorias/templates/auditorias/audi3.html
+++ b/auditorias/templates/auditorias/audi3.html
@@ -7,10 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+    {% for i in auditoria %}
 
-    {% for i in auditorias %}
-    <h1>{{i.alert}}</h1>
+    <h1>{{i.publish_date}}</h1>
+    <h1>{{i.student}}</h1>
+    <h1>{{i.teacher}}</h1>
+    <h1>{{i.seccion.nrc}}</h1>
+
     {% endfor %}
-    
+
+    <!--
+    {% for z in seccion %}
+    <h1>{{z.nrc}}</h1>
+    {% endfor %}
+    -->
 </body>
 </html>
