--- a/retro/templates/thread_details.html
+++ b/retro/templates/thread_details.html
@@ -84,6 +84,7 @@
                         </a>
                         <div class="vote-info">
                             <i class="fa fa-question-circle-o"></i> <a href="#">Respuestas ({{ x.comment_set.all.count }})</a>
+                            <i class="fa fa-question-circle-o"></i> <a href="#">Respuestas ({{ x.comment_set.all.count }})</a>
                             <i class="fa fa-clock-o"></i> <a href="#">{% with x.getDiference as difference %} {{ difference }} {% if difference == 1 %}Hora{% else %}Horas{% endif %} atrás {% endwith %}</a>
 {#                                <i class="fa fa-user"></i> <a href="#">Andrew Williams</a>#}
                         </div>
