--- a/minutas/templates/minutas/_minutas.html
+++ b/minutas/templates/minutas/_minutas.html
@@ -23,37 +23,34 @@
 {% endblock breadcrumb %}
 {% block content %}
 
-<form action="" method="POST">
+<form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
-            <label>Tematica *</label>
+            <label>Tematica</label>
             <div class="input-group">
-                {{form.them}}
+                {{form.thematic}}
             </div>
-            {{form.them.errors}}
+            {{form.thematic.errors}}
         </div>
         <div class="form-group">
-            <label>Descripcion *</label>
+            <label>Direccion</label>
             <div class="input-group">
-                {{form.desc}}
+                {{form.address}}
             </div>
-            {{form.desc.errors}}
-            <!--<ul class="errorlist">
-                <li>El email no es correcto.</li>
-            </ul>-->
+            {{form.address.errors}}
         </div>
         <div class="form-group">
-            <label>Direccion *</label>
+            <label>Documento</label>
             <div class="input-group">
-                {{form.addr}}
+                {{form.document}}
             </div>
-            {{form.addr.errors}}
+            {{form.document.errors}}
         </div>
-        <div class="text-center">
-            <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
-        </div>
-    </form> 
 
+        
+        <button type="submit" class="btn btn-primary btn-block py-2">Subir Minuta</button>
+
+    </form> 
 
 {% endblock content %}
 
