--- a/retro/templates/post_details.html
+++ b/retro/templates/post_details.html
@@ -69,7 +69,7 @@
               <div class="ibox-content">
                   <div class="row">
                       <div id="feedAnswers" class="feed-activity-list">
-                          {% for x,y in Comments %}
+                          {% for x,y,z in Comments %}
                           <div class="feed-element" align="left">
                               <div class="row">
                                   <div class="col-lg-12 col-md-12 col-sm-12">
@@ -80,6 +80,24 @@
                                       <div class="media-body ">
                                           <small class="pull-right" style=""> <b>{{x.author.user.first_name}} {{x.author.user.last_name}}</b></small><br>
                                           <div class="well">{{x.description|safe}}</div>
+
+                                            <div style="padding-top: 2px; padding-bottom: 2px;" >
+
+                                                {% if z != "" %}
+                                                <a href="{% get_media_prefix %}{{z.document}}" title="Imagen" data-gallery>
+                                                    <span>
+                                                        <img src="{% get_media_prefix %}{{z.document}}" onclick="this.width=500;this.height=500;" onmouseout="this.width=50;this.height=50;" width="50" height="50" alt="" />
+                                                    {% if x.author.user == request.user %}
+                                                        <a id="imagen" data-pk="{{z.pk}}">Eliminar</a>
+                                                    {% endif %}
+                                                    </span>
+                                                </a>
+
+                                                {% endif %}
+
+
+                                            </div>
+
                                       </div>
                                   </div>
                                   <div class="col-lg-12 col-md-12 col-sm-12">
@@ -137,6 +155,7 @@
   </div>
 {% endblock content %}
 {% block javascript %}
+    <script src="{% static 'js/plugins/blueimp/jquery.blueimp-gallery.min.js' %}"></script>
     <script src="{% static 'js/plugins/jasny/jasny-bootstrap.min.js' %}"></script>
     
   <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
@@ -225,6 +244,22 @@
           height: 100,
       });
 
+      $("#imagen").click(function () {
+          alert("aqui")
+          var pk = $(this).data("pk");
+          $.ajax({
+            url:'{% url "delete_imag" %}',
+            type: "POST",
+            data: {
+                csrfmiddlewaretoken: getCookie('csrftoken'),
+                pk: pk
+            },success: function(data) {
+                if (data.message == "ok"){
+                    location.reload();
+                }
+              }
+          });
+      })
       $(function() {
         $('form').submit(upload);
       });
