--- a/templates/frequent_questions_student.html
+++ b/templates/frequent_questions_student.html
@@ -134,7 +134,7 @@
                         </question>
 
                         <answer>
-                            En el apartado de la pregunta, en la parte inferior de la página, se debe rellenar el apartado de Comentar, luego seleccionar la opción de COMENTAR<br>
+                            En el apartado de la pregunta, en la parte inferior de la página, se debe rellenar el apartado de Comentar, luego seleccionar la opción de COMENTAR.<br>
                         </answer>
 
                     </div>
