--- a/templates/frequent_questions_teacher.html
+++ b/templates/frequent_questions_teacher.html
@@ -23,7 +23,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En primera instancia se debe entrar a la sección correspondiente, en este apartado debe dirigirse a Crear hilo, luego se debe rellenar el formulario.<br>
                         </answer>
                         <!--  -->
                         <question>
@@ -31,7 +31,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            Debe dirigirse al apartado del hilo, y seleccionar la opción SEGUIR, y con esto ya se estará siguiendo el hilo.<br>
                         </answer>
 
                     </div>
@@ -56,7 +56,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado de la pregunta, en la sección de Comentar en la parte inferior, debe seleccionar la opción ADJUNTAR ARCHIVO, y a través del explorador de archivos, seleccionar la imagen correspondiente.<br>
                         </answer>
                         <!--  -->
                         <question>
@@ -64,7 +64,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado de las respuestas, en la parte inferior de la imagen, seleccionar la opción ELIMINAR.<br>
                         </answer>
 
 
@@ -90,7 +90,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado del hilo correspondiente, seleccionar la opción de CREAR PREGUNTA, se debe rellenar el aṕartado de Título de la pregunta con la pregunta misma, y en el apartado de COntenido, se debe dar el contexto de ésta.<br>
                         </answer>
                         <!--  -->
                         <question>
@@ -98,7 +98,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado del los hilos, se debe seleccionar la pregunta correspondiente, luego seleccionar la opción de SEGUIR, con esto ya se estará siguiendo pregunta.<br>
                         </answer>
 
                     </div>
@@ -127,14 +127,14 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado de la pregunta, en la parte inferior izquierda de la respuesta, se debe seleccionar la estrella de color amarillo, con esto se podrá calficar la respuesta.<br>
                         </answer>
                         <question>
                             <strong>¿Como realizo una respuesta a una pregunta?</strong><br>
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado de la pregunta, en la parte inferior de la página, se debe rellenar el apartado de Comentar, luego seleccionar la opción de COMENTAR.<br>
                         </answer>
 
                     </div>
@@ -184,7 +184,7 @@
                         </question>
 
                         <answer>
-                            XQ SI!!<br>
+                            En el apartado del mi perfil, seleccionar la opción EDITAR MI UMBRAL, donde sérá posible editar el umbral del perfil correspondiente.<br>
                         </answer>
 
                     </div>
